# libxs

./: .abi.txt  .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  mkdocs.yml  mkslides.yml
.github/workflows/: gcc.yml  makefile.yml
.theme/: hook.py  requirements.txt
documentation/: README.md  index.md  index.rst  libxs_cpuid.md  libxs_fortran.md  libxs_gemm.md  libxs_hist.md  libxs_malloc.md  libxs_math.md  libxs_mem.md  libxs_mhd.md  libxs_mm.md  libxs_ozaki.md  libxs_reg.md  libxs_rng.md  libxs_samples.md  libxs_utils.md
documentation/ozaki/: .gitignore  custom.css  index.md  md2pptx.py  ozaki.py
documentation/samples/: libxs_ozaki.md
documentation/tests/: atomics.md  hash.md  headeronly.md  hist.md  intrinsics.md  malloc.md  matdiff.md  math.md  memory.md  mhd.md  registry.md  threadsafety.md  timer.md
include/: libxs.f  libxs.h  libxs_cpuid.h  libxs_gemm.h  libxs_hist.h  libxs_macros.h  libxs_malloc.h  libxs_math.h  libxs_mem.h  libxs_mhd.h  libxs_reg.h  libxs_rng.h  libxs_source.h  libxs_sync.h  libxs_timer.h  libxs_utils.h
samples/gemm/: Makefile  README.md  gemm_batch.c  gemm_groups.c  gemm_index.F  gemm_index.c  gemm_strided.c
samples/memcmp/: Makefile
samples/memory/: Makefile  README.md  matcpy.f
samples/ozaki/: Makefile  README.md  gemm-print.c  gemm.c  gemm.h  ozaki.c  ozaki.h  ozaki1.c  ozaki1_bf16.c  ozaki1_int8.c  ozaki2.c  ozaki2_bf16.c  ozaki2_int8.c  ozaki3.c  ozaki_gpu.c  ozaki_ocl.c  test-check.sh  test-mhd.sh  test-wrap.sh  wrap.c  wrap3m.c  zgemm3m.c
samples/registry/: Makefile  (+2 more)
scripts/: libxs.pc.in  tool_pkgconfig.pc.in
src/: libxs_cpuid_x86.c  libxs_diff.h  libxs_gemm.c  libxs_hash.c  libxs_hash.h  libxs_hist.c  libxs_main.c  libxs_main.h  libxs_malloc.c  libxs_matdiff.h  libxs_math.c  libxs_mem.c  libxs_mhd.c  libxs_reg.c  libxs_sync.c
tests/: Makefile  fprint.c  gemm.sh  hash.c  headeronly.c  headeronly_aux.c  hist.c  malloc.c  math.c  ozaki.sh  registry.c  setdiff.c  test.sh
(+6 files in other folders)
